CHANGES.txt - 05/31/2001
------------------------

CHANGES IN CUPS V1.1.9

	- Updated pstops filter to use strict handling of EPS
	  files embedded in a PostScript document.  The %%EOF
	  handling in 1.1.8 caused some dvips files not to
	  print.
	- Fixed yet another memory allocation bug in pstoraster
	  that would cause it to crash.  This fix also ensures
	  that all memory allocations are done on (at least) a
	  64-bit boundary.


CHANGES IN CUPS V1.1.8

	- Updated configure script to check for /etc/pam.d and
	  to only set PAMDIR if it exists.
	- Updated spec file to generate separate cups-pstoraster
	  package for pstoraster.
	- The spec file wasn't setting LOGDIR in the install.
	- The scheduler might restart a stopped printer after
	  stopping a print job. Thanks to Florent
	  Guiliani for finding this bug!
	- The init script showed run level 0 for the Red Hat
	  chkconfig program.  This is incorrect because Red Hat
	  doesn't use run level 0 for shutdown scripts.
	- The IPP backend did not handle the
	  client-error-not-found error when checking the status
	  of the job that was sent.  This caused remote queues
	  to stop on client machines when the server had job
	  history disabled.
	- Added httpConnectEncrypt() function to avoid
	  performance penalty for setting up encrypted
	  connections initially.
	- Use httpConnectEncrypt() in all client apps and in the
	  CUPS API to ensure consistent usage of encryption
	  throughout.
	- Jobs weren't queued to remote classes (fix from
	  Richard Begg.)
	- AIX changes from Richard Begg.
	- Fixed the pstops fix for GNOME output - no longer use
	  the page numbers in the %%Page: comment since GNOME
	  puts a filename instead (!?@!#?!).  There is still an
	  issue with N-up printing since GNOME defines its fonts
	  in the first page instead of the document setup section
	  (pages must be independent according to the DSC spec)
	  People with GNOME printing problems should consult bug
	  #54489...